lexer/snapshots/lexer__lexer_test__tests__bool.snap
---
source: lexer/lexer_test.rs
expression: let y=true
---
[
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "TRUE"
    },
    "span": {
      "start": 6,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 10,
      "end": 10
    }
  }
]
