lexer/snapshots/lexer__lexer_test__tests__comments.snap
---
source: lexer/lexer_test.rs
expression: // I am comments
---
[
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 16,
      "end": 16
    }
  }
]
