lexer/snapshots/lexer__lexer_test__tests__empty_comment_at_eof.snap
---
source: lexer/lexer_test.rs
expression: "let x = 5;\n//"
---
[
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 13,
      "end": 13
    }
  }
]
