lexer/snapshots/lexer__lexer_test__tests__simple.snap
---
source: lexer/lexer_test.rs
expression: "=+(){},:;"
---
[
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "PLUS"
    },
    "span": {
      "start": 1,
      "end": 2
    }
  },
  {
    "kind": {
      "type": "LPAREN"
    },
    "span": {
      "start": 2,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "RPAREN"
    },
    "span": {
      "start": 3,
      "end": 4
    }
  },
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "COMMA"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "COLON"
    },
    "span": {
      "start": 7,
      "end": 8
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 9,
      "end": 9
    }
  }
]
