lexer/snapshots/lexer__lexer_test__tests__string.snap
---
source: lexer/lexer_test.rs
expression: "\"a\""
---
[
  {
    "kind": {
      "type": "STRING",
      "value": "a"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 3,
      "end": 3
    }
  }
]
